# beautifulmind

./: .gitignore  README.md  go.mod  go.sum  package-lock.json  package.json
decks/: linear_algebra.yaml  transformers.yaml
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: main.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/lib/proto/: beautiulmind.client.ts  beautiulmind.ts
frontend/src/routes/: +page.svelte
frontend/www/: index.html  main.js  style.css
frontend/www/lib/proto/: beautiulmind.client.js  beautiulmind.js
internal/deck/: loader.go
internal/embedding/: generator.go
internal/engine/: engine.go
internal/grpcserver/: server.go
internal/proto/: beautiulmind.pb.go  beautiulmind_grpc.pb.go
internal/storage/: storage.go
internal/tui/: tui.go
node/: jest.config.js  package-lock.json  package.json  tsconfig.json
node/src/: db.ts  engine.ts  server.ts
proto/: beautiulmind.proto
